# types/types.go
@@ -1,6 +1,8 @@
 // Code generated by goctl. DO NOT EDIT.
 package types
 
+import "mime/multipart"
+
 type PathID struct {
 	ID int `uri:"id"`
 }
@@ -12,6 +14,10 @@ type ParamID struct {
 type IDAndName struct {
 	ID   int    `json:"id"`
 	Name string `json:"name"`
+}
+
+type UploadImageRequest struct {
+	File *multipart.FileHeader `form:"file" file:"-"`
 }
 
 type CodeResponse struct {
